--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
-    //RxJava
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.7'
+    //rx
+    implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
+    implementation ("io.reactivex.rxjava2:rxandroid:2.0.2") {
+        exclude group: 'io.reactivex.rxjava2'
+    }
 
 
     //Glide
