categories recyclerView done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.16'
 
 
+    implementation 'com.android.support:design:27.1.1'
 }
