--- a/drg/build.gradle
+++ b/drg/build.gradle
@@ -39,4 +39,9 @@ dependencies {
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
+
+
+    //
+    implementation 'com.android.support:design:27.1.1'
 }
+
