--- a/drg/build.gradle
+++ b/drg/build.gradle
@@ -41,7 +41,10 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
 
 
-    //
+    //support design
     implementation 'com.android.support:design:27.1.1'
+
+
+
 }
 
