--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,22 +44,23 @@ dependencies {
 
     //rx
     implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
-    implementation ("io.reactivex.rxjava2:rxandroid:2.0.2") {
+    implementation("io.reactivex.rxjava2:rxandroid:2.0.2") {
         exclude group: 'io.reactivex.rxjava2'
     }
-
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
     // Dagger core dependencies
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
-    implementation 'com.google.dagger:dagger:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
+    implementation 'com.google.dagger:dagger:2.17'
     // Dagger Android dependencies
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
-    implementation 'com.google.dagger:dagger-android:2.16'
-    implementation 'com.google.dagger:dagger-android-support:2.16'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.17'
+    implementation 'com.google.dagger:dagger-android:2.17'
+    implementation 'com.google.dagger:dagger-android-support:2.17'
 
-
+    //support design
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+
 }
