--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".single_activity.SingleActivity">
+        <activity android:name=".home_activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity
-            android:name=".home_activity.HomeActivity">
+            android:name=".single_activity.SingleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
